# video-editor-ai-agent

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts  types.ts
apps/studio/: README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
docs/internal/: AUDIT.md  STRUCTURE.md
scripts/: validate.ps1  validate.sh
src/: logging_config.py  main.py
src/cli/: main.ts
src/config/: __init__.py  settings.py
src/core/: index.d.ts  index.js  index.ts
src/core/config/: env.d.ts  env.js  env.ts  index.d.ts  index.js
src/core/errors/: app-error.d.ts  app-error.js  app-error.ts
src/core/logging/: logger.d.ts  logger.js  logger.ts
src/core/redis/: client.d.ts  client.js  client.ts  job-persistence.d.ts  job-persistence.js  job-persistence.ts
src/core/schemas/: index.d.ts  index.js  index.ts
src/domain/: index.d.ts  index.js  index.ts
src/domain/agents/: director.d.ts  director.js  director.ts  editor.d.ts  editor.js  editor.ts  reviewer.d.ts  reviewer.js  reviewer.ts
src/domain/pipeline/: preprocess.d.ts  preprocess.js  preprocess.ts  runner.d.ts  runner.js  runner.ts
src/domain/tools/: analyze.d.ts  analyze.js  analyze.ts  edit.d.ts  edit.js  edit.ts  ffmpeg.d.ts  ffmpeg.js  ffmpeg.ts  render.d.ts  render.js  render.ts
src/domain/utils/: paths.d.ts  paths.js  paths.ts
src/web/: app.py  errors.py
src/web/routes/: browse.py  config.py  (+1 more)
tests/unit/: analyze.test.ts
(+23 files in other folders)
