[project]
name = "agentic-video-editor"
version = "0.1.0"
description = "Agentic video editor — raw footage + creative brief → ad-ready video"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "scenedetect[opencv]>=0.6",
    "faster-whisper>=1.0.0",
    "moviepy>=2.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "pysubs2>=1.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]

[project.scripts]
ave = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["I001", "UP017"]
"src/pipeline/**" = ["UP017"]
"src/tools/**" = ["E501"]
"src/web/jobs.py" = ["UP017", "UP037"]
